prevent wrap of title in topbar

--- a/src/Components/TopBar/TopBar.scss
+++ b/src/Components/TopBar/TopBar.scss
@@ -56,6 +56,7 @@ $headerH: 4.5rem; // H1 line-height (1.5rem) + vertical padding (1.5rem x 2)
       font-weight: 500;
       line-height: 100%; /* 1.5rem */
       letter-spacing: 0.045rem;
+      white-space: nowrap;
     }
   }
 
